--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
           <hr>
           <p>Use testing phase of Eucation Problem statment of Hackathon<br> for more ai and other feature related to education then<br> click For rotation</p>
           <a href="file:///D:/Sugam%20project/Testing%20Edusphere[1].html" class="card-btn" target="_blank">Open Edusphere testing</a>
+          <br><br><hr>
+          <a href="https://sugamkaistha1224.github.io/edusphere-enviroments-app/" class="card-btn" target="_blank">Edu-Sphere OS Env.</a>
+             <a href="https://software-s-beta.vercel.app/" class="card-btn" target="_blank">Software-s OS</a>
+             <br>
+              <a href="https://sugamkaistha1224.github.io/Edusphere-Dashboard/" class="card-btn" target="_blank">Edusphere-Dashboard</a>
         </div>
       </div>
       <div class="card-contents card-back">
@@ -119,8 +124,14 @@
           <h2>Edu-Sphere Official</h2>
           <hr>
           <p>the way you think, inovate, upgrade new ideas by <br>Sugam's AI platform Edushere with own Softwars, Study tools, dhasboard, etc. <br>Click To turn back</p>
+         
           <a href="https://about-edusphere.vercel.app/" class="card-btn" target="_blank">About Edu-Sphere</a>
            <a href="https://sugamkaistha1224.github.io/Edusphere-Official/" class="card-btn" target="_blank">Visit Official Site</a>
+           <br><hr>
+             <a href="https://sugamkaistha1224.github.io/edusphere-enviroments-app/" class="card-btn" target="_blank">Edu-Sphere OS Env.</a>
+             <a href="https://software-s-beta.vercel.app/" class="card-btn" target="_blank">Software-s OS</a>
+             <br>
+              <a href="https://sugamkaistha1224.github.io/Edusphere-Dashboard/" class="card-btn" target="_blank">Edusphere-Dashboard</a>
         </div>
       </div>
     </div>
