--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h2>Edusphere Luma</h2>
           <hr>
           <p>Use testing phase of Eucation Problem statment of Hackathon<br> for more ai and other feature related to education then<br> click For rotation</p>
-          <a href="file:///D:/Sugam%20project/Testing%20Edusphere[1].html" class="card-btn" target="_blank">Open Edusphere testing</a>
+          <a href="https://edusphere-luma-g1sg.vercel.app/" class="card-btn" target="_blank">Open Edusphere testing</a>
           <br><br><hr>
           <a href="https://sugamkaistha1224.github.io/edusphere-enviroments-app/" class="card-btn" target="_blank">Edu-Sphere OS Env.</a>
              <a href="https://software-s-beta.vercel.app/" class="card-btn" target="_blank">Software-s OS</a>
